<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Villain Number One</string>
    <string name="image_description">WE ARE NUMBER ONE</string>
    <string name="name">Name</string>
    <string name="name_value">Robbie Rotten</string>
    <string name="gender">Gender</string>
    <string name="gender_value">Male</string>
    <string name="age">Age</string>
    <string name="age_value">31</string>
    <string name="bounty">Bounty</string>
    <string name="bounty_value">$50.000</string>
    <string name="scrollview">Robbie Rotten (played by Stefán Karl Stefánsson) is a lazy man who continuously formulates feckless schemes in which he masquerades in a disguise to lure the residents away from their newly-active lifestyles. He passionately abhors the influence of Stephanie and Sportacus on the townspeople. A number of his plans are intended to do away with them. Ironically, Robbie places so much effort into his schemes that he becomes one of LazyTown\'s most active citizens.</string>
    <string name="details">Details:</string>
    <string name="report_button">Report</string>
    <string name="button_take_picture">Take Picture</string>
    <string name="button_gps_pos">GPS position</string>
    <string name="button_call_113">Call 113</string>
    <string name="button_back">Back</string>
    <string name="button_send_report">Send Report</string>
    <string name="list_title">Criminals</string>
</resources>
