<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/main_background">

    <ImageView
        android:id="@+id/imageView2"
        style="@style/image_main"
        app:srcCompat="@drawable/ronnierotten" />

    <TableLayout style="@style/table_main">

        <TableRow style="@style/table_main_row">

            <TextView
                style="@style/table_main_row_text"
                android:text="@string/name" />

            <TextView
                android:id="@+id/details_name"
                style="@style/table_main_row_text"
                android:text="@string/name_value" />
        </TableRow>

        <TableRow style="@style/table_main_row">

            <TextView
                style="@style/table_main_row_text"
                android:text="@string/gender" />

            <TextView
                style="@style/table_main_row_text"
                android:text="@string/gender_value" />
        </TableRow>

        <TableRow style="@style/table_main_row">

            <TextView
                style="@style/table_main_row_text"
                android:text="@string/age" />

            <TextView
                style="@style/table_main_row_text"
                android:text="@string/age_value" />
        </TableRow>

        <TableRow style="@style/table_main_row">

            <TextView
                style="@style/table_main_row_text"
                android:text="@string/bounty" />

            <TextView
                style="@style/table_main_row_text"
                android:text="@string/bounty_value" />
        </TableRow>
    </TableLayout>

    <LinearLayout style="@style/details_main">

        <TextView
            style="@style/details_main_text"
            android:text="@string/details" />

        <ScrollView style="@style/details_main_scrollview">

            <TextView
                style="@style/details_main_scrollview_text"
                android:text="@string/scrollview" />
        </ScrollView>
        <Button
            android:id="@+id/button_report"
            style="@style/main_button"
            android:text="@string/report_button" />
    </LinearLayout>

</LinearLayout>
