<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="@style/main_background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/details_mugshot"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_alignStart="@+id/tableLayout"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_description"
            app:srcCompat="@drawable/ronnierotten" />

        <TableLayout
            android:id="@+id/tableLayout"
            style="@style/table_main">

            <TableRow style="@style/table_main_row">

                <TextView
                    style="@style/table_main_row_text"
                    android:text="@string/name" />

                <TextView
                    android:id="@+id/details_name"
                    style="@style/table_main_row_text"
                    android:text="@string/name_value" />
            </TableRow>

            <TableRow style="@style/table_main_row">

                <TextView
                    style="@style/table_main_row_text"
                    android:text="@string/gender" />

                <TextView
                    android:id="@+id/details_gender"
                    style="@style/table_main_row_text"
                    android:text="@string/gender_value" />
            </TableRow>

            <TableRow style="@style/table_main_row">

                <TextView
                    style="@style/table_main_row_text"
                    android:text="@string/age" />

                <TextView
                    android:id="@+id/details_age"
                    style="@style/table_main_row_text"
                    android:text="@string/age_value" />
            </TableRow>

            <TableRow style="@style/table_main_row">

                <TextView
                    style="@style/table_main_row_text"
                    android:text="@string/bounty" />

                <TextView
                    android:id="@+id/details_bounty"
                    style="@style/table_main_row_text"
                    android:text="@string/bounty_value" />
            </TableRow>
        </TableLayout>

    </LinearLayout>

    <LinearLayout style="@style/details_main">

        <TextView
            style="@style/details_main_text"
            android:text="@string/details" />

        <ScrollView style="@style/details_main_scrollview">

            <TextView
                android:id="@+id/details_description"
                style="@style/details_main_scrollview_text"
                android:text="@string/scrollview" />
        </ScrollView>

        <ListView
            android:id="@+id/details_crimes"
            android:layout_width="wrap_content"
            android:layout_height="200dp">

        </ListView>

        <Button
            android:id="@+id/button_report"
            style="@style/main_button"
            android:text="@string/report_button" />
    </LinearLayout>

</LinearLayout>
