<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_report"
    style="@style/report_background"
    tools:context="com.sm42.oscar.testapplication.ReportActivity">

    <Button
        android:id="@+id/button_take_picture"
        style="@style/report_button"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/button_take_picture" />

    <Button
        android:id="@+id/button_gps_pos"
        style="@style/report_button"
        android:layout_alignBottom="@+id/button_take_picture"
        android:layout_alignParentEnd="true"
        android:text="@string/button_gps_pos" />

    <ImageView
        android:id="@+id/imageView_mugshot"
        android:layout_width="wrap_content"
        android:layout_height="300dp"
        android:layout_below="@+id/button_take_picture"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/ronnierotten" />

    <Button
        android:id="@+id/button_call_113"
        style="@style/report_button"
        android:layout_below="@+id/imageView_mugshot"
        android:layout_centerHorizontal="true"
        android:text="@string/button_call_113" />

    <Button
        android:id="@+id/button_back"
        style="@style/report_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:text="@string/button_back" />

    <Button
        android:id="@+id/button_send_report"
        style="@style/report_button"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/button_send_report" />
</RelativeLayout>
